--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
     "weex-amui": "^0.1.1",
-    "weex-flymeui": "^0.1.25",
+    "weex-flymeui": "/Users/zhuzhe/git/snice/weex-flymeui",
     "weex-ui": "^0.6.7"
   },
   "devDependencies": {
@@ -35,7 +35,7 @@
     "clean-webpack-plugin": "^1.0.0",
     "cross-env": "^5.2.0",
     "easywebpack-cli": "^3.12.0",
-    "easywebpack-weex": "^3.2.0",
+    "easywebpack-weex": "https://github.com/snice/easywebpack-weex.git",
     "eslint": "^3.18.0",
     "eslint-config-eslint": "^5.0.1",
     "eslint-plugin-node": "^7.0.1",
