--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
     "weex-amui": "^0.1.1",
-    "weex-flymeui": "/Users/zhuzhe/git/snice/weex-flymeui",
+    "weex-flymeui": "https://github.com/snice/weex-flymeui.git",
     "weex-ui": "^0.6.7"
   },
   "devDependencies": {
