--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
     "cross-env": "^5.2.0",
+    "easywebpack": "https://github.com/snice/easywebpack.git#3.10.5",
     "easywebpack-cli": "^3.12.0",
     "easywebpack-weex": "https://github.com/snice/easywebpack-weex.git",
     "eslint": "^3.18.0",
     "eslint-config-eslint": "^5.0.1",
+    "eslint-loader": "^2.1.1",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-vue": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
