--- a/package.json
+++ b/package.json
@@ -13,11 +13,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "vuex-router-sync": "^5.0.0",
     "weex-amui": "^0.1.1",
-    "weex-flymeui": "https://github.com/snice/weex-flymeui.git",
     "weex-ui": "^0.6.7"
   },
   "devDependencies": {
@@ -37,11 +33,15 @@
     "easywebpack": "https://github.com/snice/easywebpack.git#3.10.5",
     "easywebpack-cli": "^3.12.0",
     "easywebpack-weex": "https://github.com/snice/easywebpack-weex.git",
-    "eslint": "^3.18.0",
+    "eslint": "^5.9.0",
     "eslint-config-eslint": "^5.0.1",
+    "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-vue": "^2.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^4.7.1",
     "html-webpack-plugin": "^3.2.0",
     "imagemin-webpack-plugin": "^2.3.0",
     "less": "^3.8.1",
