--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": ["es2015", "stage-0"],
   "plugins": [
+    "transform-runtime",
     "add-module-exports",
     "transform-object-rest-spread",
     "syntax-dynamic-import",
