--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "extend": "^3.0.0",
     "lodash": "^4.17.4",
+    "lottie-web": "^5.4.2",
     "moment": "^2.17.1",
     "vue": "^2.5.17",
     "weex-amui": "^0.1.1",
