--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "fix": "eslint --fix ."
   },
   "dependencies": {
+    "@antv/f2": "^3.3.1",
     "extend": "^3.0.0",
     "lodash": "^4.17.4",
     "lottie-web": "^5.4.2",
